# xrdcl-http

./: CMakeLists.txt  PreReleaseNotes.txt  README.md
cmake/: FindXrdCl.cmake
config/: http.client.conf.example
packaging/rhel/: xrdcl-http.spec.in
src/: CMakeLists.txt  XrdClHttp.cmake  dummy.cc  dummy.hh
src/XrdClHttp/: HttpFilePlugIn.cc  HttpFilePlugIn.hh  HttpFileSystemPlugIn.cc  HttpFileSystemPlugIn.hh  HttpPlugInFactory.cc  HttpPlugInUtil.cc  HttpStat.cc  HttpStat.hh  Posix.cc  Posix.hh  XrdClHttp.cc  XrdClHttp.hh
test/: common.sh  run_test.sh
test/cases/000-simple-download/: main.sh
test/cases/001-deep-path-download/: main.sh
test/cases/002-simple-upload/: main.sh
test/cases/003-deep-path-upload/: main.sh
test/config/: caddyfile
